--- a/partials/bxslider.hbs
+++ b/partials/bxslider.hbs
@@ -6,7 +6,7 @@
 <script  type="text/javascript" src="{{asset "bxslider/jquery.bxslider.min.js"}}"></script>
 
 <!-- Link CSS -->
-link href="{{asset "bxslider/jquery.bxslider.css"}}" rel="stylesheet" />
+<link href="{{asset "bxslider/jquery.bxslider.css"}}" rel="stylesheet" />
 
 <!-- Initiate instances -->
 <script  type="text/javascript" src="{{asset "bxslider/options/options.bxslider.js"}}"></script>
